versioned_docs/version-8.0/self-managed/zeebe-deployment/zeebe-installation.md
---
id: zeebe-installation
title: "Installation"
sidebar_label: "Overview"
---

Please refer to the [Installation Guide](/self-managed/platform-deployment/platform-8-deployment.md) for details on how to install Zeebe in a private cloud or on your own hardware.

Within this section you will find detailed information about:

- [Configuration](configuration/configuration.md) - Explains the configuration options. These configuration options apply to both environments, but not to Camunda Platform 8. In Camunda Platform 8, the configuration is provided for you.
- [Security](security/security.md) - Discusses the security aspects of running Zeebe and how to use them.
- [Operation](operations/zeebe-in-production.md) - Outlines topics that become relevant when you want to operate Zeebe in production.

:::note
New to BPMN and want to learn more before moving forward? [Visit our Get Started Guides](/docs/guides/getting-started/) to learn about BPMN and orchestration.
:::

## Additional resources

If you have questions or feedback, we encourage you to visit the following:

- [User forum](https://forum.camunda.io/)
- [Public Slack channel](https://camunda-slack-invite.herokuapp.com/)
- [GitHub issue tracker](https://github.com/camunda/zeebe/issues)
